added back functionality to back button

--- a/link-folder/link.html
+++ b/link-folder/link.html
@@ -47,7 +47,7 @@
         <h1 class="headline">
             <span class="header">LunipaEntchen2</span><br> aka EntchenTV
        </h1>
-       <img class="back"src="../back.png">
+       <img onclick="history.back();" class="back" src="../back.png">
     </div>
 
     <div class="container">
